--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "quick-redux": "^1.1.10",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "rc-datepicker": "^5.0.12",
+    "rc-pagination": "^1.16.3",
+    "react-loadable": "^5.3.1",
+    "nprogress": "^0.2.0",
     "react-router-redux": "^4.0.8",
     "history": "^4.7.2"
   },
