--- a/package.json
+++ b/package.json
@@ -3,24 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.4.1",
+    "axios": "^0.18.0",
+    "history": "^4.7.2",
+    "nprogress": "^0.2.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
-    "quick-redux": "^1.1.10",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "rc-datepicker": "^5.0.12",
-    "rc-pagination": "^1.16.3",
     "react-loadable": "^5.3.1",
-    "nprogress": "^0.2.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
-    "history": "^4.7.2"
+    "react-scripts": "1.1.4",
+    "react-youtube": "^7.6.0",
+    "redux": "^4.0.0",
+    "redux-box": "^1.6.0",
+    "redux-saga": "^0.16.0",
+    "reselect": "^3.0.1"
+  },
+  "resolutions": {
+    "immer": "^1.2.1",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^16.3.11",
-    "@types/react-router-dom": "^4.2.6",
-    "@types/react-dom": "^16.0.5"
+    "@types/react-dom": "^16.0.5",
+    "@types/react-router-dom": "^4.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
